--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
+/* Body Instagram */
 body {
     background-color: rgb(187, 180, 180);
     margin: 0;
 }
 
-div {
+
+/* Div principal */
+.container-fluid {
     box-sizing: border-box;
+}
+
+/* Navbar */
+.container {
+    width: 600px;
+    margin: auto;
 }
 
 header {
@@ -18,6 +27,7 @@ header h1 {
     margin: 0px;
 }
 
+/* Post */
 .post {
     background-color: white;
     margin-top: 15px;
@@ -44,12 +54,10 @@ h2 {
     margin: 0%;
 }
 
-.container {
-    width: 600px;
-    margin: auto;
-}
-
 span {
-    float: right;
-    width: 200px;
+    display: inline-block;
+    text-align: center;
+    margin-top: 20px;
+    margin-left: 150px;
+    
 }
